tests/testcrate/tests/ui/aggregate_gen.stderr
error[E0609]: no field `averag` on type `main::Aggregate`
  --> $DIR/aggregate_gen.rs:49:34
   |
49 |         println!("{}", aggregate.averag);
   |                                  ^^^^^^ help: a field with a similar name exists: `average`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
